[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/UI.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Asap-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Asap-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Scene/UIComponents/TransitionScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scene/TitleCard.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="TitleCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ActNumber" type="Label" parent="."]
margin_left = 64.0
margin_top = 144.0
margin_right = 175.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "ACT 0"

[node name="ActTitle" type="Label" parent="."]
margin_left = 67.0
margin_top = 207.0
margin_right = 107.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 2 )
text = "Dust"

[node name="TransitionScene" parent="." instance=ExtResource( 4 )]
